<resources>
    <string name="app_name">WalletForAndroid</string>
    <string name="ip">ip</string>
    <string name="port">port</string>
    <string name="encrypt">encrypt</string>
    <string name="isEncrypt">is encrypt</string>
    <string name="connect">connect</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="detail">detail</string>
    <string name="budget">budget</string>
    <string name="money">money</string>
    <string name="typeName">type name</string>
    <string name="income">income</string>
    <string name="expenditure">expenditure</string>
    <string name="nowIncome">now income</string>
    <string name="nowExpenditure">now expenditure</string>
    <string name="value">value</string>
    <string name="addMoney">add money</string>
    <string name="useMoney">use money</string>
    <string name="changeMoney">change money</string>
    <string name="removeMoney">remove money</string>
    <string name="addBudget">add budget</string>
    <string name="changeBudget">change budget</string>
    <string name="removeBudget">remove budget</string>
    <string name="rollBack">roll back</string>
    <string name="id">id</string>
    <string name="event">event</string>
    <string name="date">date</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="addEdge">add edge</string>
    <string name="script">script</string>
    <string name="removeEdge">remove edge</string>
    <string name="changeEdge">change edge</string>
    <string name="moneyType">money type</string>
    <string name="budgetType">budge type</string>
    <string name="useType">use type</string>
    <string name="settlementAccounts">settlement accounts</string>
    <string name="transfer">transfer</string>
    <string name="creditor">creditor</string>
    <string name="deadline">deadline</string>
    <string name="inOrOut">in or out</string>
    <string name="loanOut">loan out</string>
    <string name="loanIn">loan in</string>
    <string name="addLoan">add loan</string>
    <string name="repay">repay</string>
    <string name="removeLoan">remove loan</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
</resources>
