<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/removeLoan"
        android:id="@+id/mainRemoveLoan"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repay"
        android:id="@+id/mainRepay"
        android:layout_above="@+id/mainRemoveLoan"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addLoan"
        android:id="@+id/mainAddLoan"
        android:layout_above="@+id/mainRepay"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView5"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/mainAddLoan" >

    </ScrollView>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView2" >

        <TableLayout
            android:id="@+id/loanTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:background="@drawable/table_frame_gray"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/id"
                    android:background="@drawable/table_frame_gray"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/creditor"
                    android:background="@drawable/table_frame_gray"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/value"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/deadline"
                    android:background="@drawable/table_frame_gray"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/inOrOut"
                    android:background="@drawable/table_frame_gray"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>
    </HorizontalScrollView>
</RelativeLayout>