<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentTop="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/moneyTable">

            <TableRow
                android:layout_width="match_parent"
                android:background="@drawable/table_frame_gray"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/table_frame_gray"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/money"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/table_frame_gray"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/value"
                    android:layout_weight="1" />

            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addMoney"
            android:id="@+id/moneyAddMoney"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transfer"
            android:id="@+id/moneyTransfer"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/useMoney"
            android:id="@+id/moneyUseMoney"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>